--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\".titt # 'Art Vandelay'"
    ]
   },
   {
