automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\".tittle # 'Art Vandelay'"
+    "\"art vandelay\".title # 'Art Vandelay'"
    ]
   },
   {
