--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\".title # 'Art Vandelay'"
+    "\"art vandelay\".title() # 'Art Vandelay'"
    ]
   },
   {
