--- a/index.ipynb
+++ b/index.ipynb
@@ -308,22 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'7285553334'"
+       "str"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(\"7285553334\" # 7285553335"
+    "type(\"7285553334\") # 7285553335"
    ]
   },
   {
