--- a/index.ipynb
+++ b/index.ipynb
@@ -308,22 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "7285553335"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "int(\"7285553334\") # 7285553335"
+    "int(\"7285553334\")+1 # 7285553335"
    ]
   },
   {
